Bug 442120 - Krita nightly crashes after painting for 5-10 minutes
Summary: Krita nightly crashes after painting for 5-10 minutes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-07 11:27 UTC by Raghavendra kamath
Modified: 2021-09-08 07:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
gdb log (3.35 MB, text/plain)
2021-09-07 11:27 UTC, Raghavendra kamath
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2021-09-07 11:27:21 UTC
Created attachment 141358 [details]
gdb log

SUMMARY
I as testing todays appimage 5.1.0-prealpha (git 9202fb2) and after some painting for approximately for 5-10 minutes krita crashes and I was able to reproduce this thrice. The size of the document is A3 300 ppi I was using a normal simple brush and only 2 layers

I will attached the crash log from gdb
Comment 1 Halla Rempt 2021-09-07 11:30:37 UTC
Git commit b510c738190eb53d276ab9681aadfcea04057db2 by Halla Rempt.
Committed on 07/09/2021 at 11:30.
Pushed by rempt into branch 'master'.

Pattern manager: Do not add resources if not in gui thread
Related: bug 441976

M  +3    -1    plugins/paintops/libpaintop/kis_linked_pattern_manager.cpp

https://invent.kde.org/graphics/krita/commit/b510c738190eb53d276ab9681aadfcea04057db2
Comment 2 Halla Rempt 2021-09-08 07:53:18 UTC
Git commit 7c2cc8e722da77fd460c09d3bb383392a5cd2142 by Halla Rempt.
Committed on 08/09/2021 at 07:29.
Pushed by rempt into branch 'krita/5.0'.

Pattern manager: Do not add resources if not in gui thread
Related: bug 441976
(cherry picked from commit b510c738190eb53d276ab9681aadfcea04057db2)

M  +3    -1    plugins/paintops/libpaintop/kis_linked_pattern_manager.cpp

https://invent.kde.org/graphics/krita/commit/7c2cc8e722da77fd460c09d3bb383392a5cd2142