Pattern manager: Do not add resources if not in gui thread

BUG:442120
BUG:441976
(cherry picked from commit b510c738190eb53d276ab9681aadfcea04057db2)